# botovod3000

./: .$botovod3000.drawio.bkp  .gitignore  README.md  botovod3000.drawio  pyproject.toml
botovod3000/: manage.py
botovod3000/botovod3000/: asgi.py  settings.py  urls.py  wsgi.py
botovod3000/botovod3000/static/botovod3000/css/: base_style.css
botovod3000/botovod3000/static/botovod3000/js/: base_script.js
botovod3000/botovod3000/templates/: base.html  navbar.html  sidebar.html
botovod3000/bots/: admin.py  models.py
botovod3000/control_panel/: urls.py  views.py
botovod3000/control_panel/static/control_panel/css/: style_control_panel.css
botovod3000/control_panel/templates/control_panel/: container_cards_block.html  index.html  profit_graphics.html  transaction_history.html
botovod3000/hystorydeal/: apps.py
botovod3000/static/botovod3000/css/: base_style.css
