[project]
name = "botovod3000"
package-mode = false
version = "0.0.1"
description = "Панель управления для ботов (торгующих на bybit)"
authors = [
    {name = "div1ne",email = "d1vinel3af@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
